# firewall-proto

./: CMakeLists.txt  README.md  firewall.c  generator.c
data/: in  out  rules
include/firewall/: checker.h  ep.h  net.h  rule.h  rules_storage.h  rules_storage_manager.h  session.h  static_rules_storage.h  utils.h
src/: checker.c  ep.c  net.c  rule.c  rules_storage.c  rules_storage_manager.c  session.c  static_rules_storage.c  utils.c
tests/: CMakeLists.txt  run_all  test.h  test_checker.c  test_ep.c  test_net.c  test_rule.c  test_session.c  test_utils.c
